added some descriptions to ndvi file

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiments"
+    "# Experiments with NDVI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,80 +18,68 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "from sklearn import datasets"
+    "import imageio"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "iris = datasets.load_iris()\n",
-    "digits = datasets.load_digits()"
+    "## Reading the muti-band file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im0 = digits.data[100]\n",
-    "im0 = im0 * 255 / max(im0)\n",
-    "#im0 = np.array([0 if x < 50 else x for x in im0])\n",
-    "imnew = np.array([(i,i,i) for i in im0]).astype(int)\n",
-    "im = 256 - imnew.reshape(8,8,3)\n",
-    "#plt.imshow(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r-- 1 amin amin 22M Oct 25 10:26 GeoTiffTools/venv/bgren.tiff\r\n"
+      "-rw-rw-r-- 1 amin amin 22M Oct 25 10:26 /home/amin/Documents/GeoTiffTools/venv/bgren.tiff\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -lah GeoTiffTools/venv/bgren.tiff"
+    "!ls -lah ~/Documents/GeoTiffTools/venv/bgren.tiff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imageio"
+    "img = imageio.volread('~/Documents/GeoTiffTools/venv/bgren.tiff')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "img = imageio.volread('GeoTiffTools/venv/bgren.tiff')"
+    "## Calculating the NDVI\n",
+    "As stated [here](https://micasense.com/red-edge-sample-data/), the sencond and the forth bands of the file are red and near infrared bands, respectively.\n",
+    "\n",
+    "Therefore, NDVI is calculated based on the following formula:\n",
+    "\n",
+    "$NDVI=\\frac{NIR-RED}{NIR+RED}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0a6a0885f8>"
+       "<matplotlib.image.AxesImage at 0x7fd4f79158d0>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +99,66 @@
    "source": [
     "l2=img[:,:,2]\n",
     "l4=img[:,:,4]\n",
-    "plt.imshow((l4-l2)/(l4+l2))"
+    "ndvi = (l4-l2)/(l4+l2)\n",
+    "plt.imshow(ndvi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As it is shown above, it seems the calculations are correct.\n",
+    "## Processing the image:\n",
+    "Since I don't know how the NDVI data must be processed, I do a basic operation. I consider a threshold, and calculate the percentage of the NDVI values above that. I consider the threshold to be the half of the maximum NDVI value in the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max NDVI pixel value:  0.9, threshold: 0.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = max(ndvi.reshape(-1))\n",
+    "threshold = m * 0.5\n",
+    "print(\"Max NDVI pixel value: {0:4.2}, threshold: {1:4.2}\".format(m, threshold))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of pixels above the threshold: 37.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "above_threshold = 100. * np.sum(ndvi >= threshold) / (ndvi.shape[0]*ndvi.shape[1])\n",
+    "print(\"Percentage of pixels above the threshold: {0:4.3}\".format(above_threshold))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Based on what I see in the image, and the percentage I calculated, I think around 37 percentage of the image is covered with healthy vegetation.\n",
+    "\n",
+    "Another process can also be done on the image to find where the above threshold points do exist, or where they don't (in case of finding unhealthy vegetations).\n",
+    "\n",
+    "If a set of images from the same place is provided, I will check what is happening to the overal health, or if all parts of the farm are the same with regards to NDVI."
    ]
   }
  ],
